--- a/references.bib
+++ b/references.bib
@@ -429,3 +429,37 @@ isbn="978-3-319-17091-6"
   date = {2019},
   isbn = {978-85-393-0785-2},
 }
+
+@INPROCEEDINGS{Saltz2019,
+  author={Saltz, Jeffrey and Suthrland, Alex},
+  booktitle={2019 IEEE International Conference on Big Data (Big Data)},
+  title={SKI: An Agile Framework for Data Science},
+  year={2019},
+  volume={},
+  number={},
+  pages={3468-3476},
+  keywords={Data science;Big Data;Task analysis;Project management;Data mining;Data models;Data Science;Big Data;Agile;Process Methodology},
+  doi={10.1109/BigData47090.2019.9005591}}
+
+
+@INPROCEEDINGS{Baijens2020,
+  author={Baijens, Jeroen and Helms, Remko and Iren, Deniz},
+  booktitle={2020 IEEE 22nd Conference on Business Informatics (CBI)},
+  title={Applying Scrum in Data Science Projects},
+  year={2020},
+  volume={1},
+  number={},
+  pages={30-38},
+  keywords={Data science;Biological system modeling;Data models;Organizations;Task analysis;Software;Data Science;Agile;Scrum},
+  doi={10.1109/CBI49978.2020.00011}}
+
+@INPROCEEDINGS{Kraut2022,
+  author={Kraut, Nils and Transchel, Fabian},
+  booktitle={2022 7th International Conference on Big Data Analytics (ICBDA)},
+  title={On the Application of SCRUM in Data Science Projects},
+  year={2022},
+  volume={},
+  number={},
+  pages={1-9},
+  keywords={Data science;Big Data;Task analysis;Scrum (Software development);Software engineering;SCRUM;data science;project management},
+  doi={10.1109/ICBDA55095.2022.9760341}}
