Roles of our approach.

--- a/data.tex
+++ b/data.tex
@@ -1522,3 +1522,5 @@ convert a text into a structured dataset by counting the number of occurrences o
 word.  However, we lose the order of the words in the text.
 
 The study of unstructured data is, for the moment, out of the scope of this book.
+
+% vim: set spell spelllang=en:
