--- a/history.tex
+++ b/history.tex
@@ -742,4 +742,4 @@ learning from intelligent teachers paradigm.  They regard the \gls{lusi} theory 
 next step in the evolution of learning theory, calling it the ``complete statistical
 theory of learning.''
 
-% vim: set spell spelllang=en
+% vim: set spell spelllang=en:
